# gotst

./: .gitignore  AGENTS.md  CMakeLists.txt  COSYVOICE_PLAN.md  README.md
addons/gotst/: gotst.gdextension  gotst.gdextension.uid
cli/: CMakeLists.txt  README.md  cli_common.cpp  cli_common.hpp  cmd_inspect.cpp  cmd_irodori_tts.cpp  cmd_qwen_tts.cpp  main.cpp
docs/: feature_plan.md  roundtrip_handover_report.md  setup_build.md
include/gotst/core/: asr_frontend.hpp  asr_token_decoder.hpp  cancellation_token.hpp  fft.hpp  irodori_tts_session.hpp  language_config.hpp  qwen3_forced_aligner.hpp  qwen_tts_pipeline.hpp  result.hpp  speaker_mel.hpp  speech_encoder_session.hpp  speech_runtime_core.hpp  ten_vad.hpp  text_tokenization.hpp  tts_code_generator.hpp  tts_prompt_assembly.hpp  tts_waveform_decoder.hpp
include/gotst/godot/: speech_runtime.hpp  speech_runtime_config.hpp
src/core/: asr_frontend.cpp  asr_token_decoder.cpp  fft.cpp  irodori_tts_session.cpp  language_config.cpp  onnx_embedding_utils.hpp  qwen3_forced_aligner.cpp  qwen_tts_pipeline.cpp  sampling_utils.hpp  speaker_mel.cpp  speech_encoder_session.cpp  speech_runtime_core.cpp  ten_vad.cpp  text_tokenization.cpp  tts_code_generator.cpp  tts_prompt_assembly.cpp  tts_waveform_decoder.cpp
src/godot/: register_types.cpp  speech_runtime.cpp  speech_runtime_config.cpp
tests/fixtures/: test_custom_voice_config.json  test_voice_clone.json
tests/unit/: CMakeLists.txt  test_asr_frontend.cpp  test_cancellation.cpp  test_custom_voice.cpp  test_fft.cpp  test_gdscript_parity.cpp  test_irodori_tts_session.cpp  test_kernel.cpp  test_language_config.cpp  test_qwen3_forced_aligner.cpp  test_speaker_mel.cpp  test_speech_encoder_session.cpp  test_speech_runtime_core.cpp  test_speech_tokenizer.cpp  test_ten_vad.cpp  test_tts_prompt_assembly.cpp  test_tts_waveform_decoder.cpp
